# utils

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  build2.bat  build2.sh  copy.cpp  cut.cpp  delgaaps.cpp  foffset.cpp  hexpatch.cpp  insert.cpp  kerver.cpp  local.properties  main.cpp  main.hpp  sdat2img.cpp  utils.7z  utils.cpp  utils_04022024.7z  writekey.cpp
include/: bootimg.h  main.hpp
src/: block_finder.cpp  chunk_split.cpp  copy.cpp  cut.cpp  delgaaps.cpp  file_explorer.cpp  fm.cxx  foffset.cpp  fstab_fix.cpp  fstab_fix.cxx  hexpatch.cpp  insert.cpp  kerver.cpp  logo_mtk.cpp  main.cpp  md1img.cpp  sdat2img.cpp  shared_block_detector.cpp  utils.cpp  writekey.cpp
src/e2fsdroid/: block_range.c  e2fsdroid.c  fsmap.c  fsmap.h  perms.c  perms.h
src/e2fsdroid/ext2fs/: Makefile  ext2_fs.h  ext2fs.h  ext2fs.pc  inode_io.c  link.c  res_gdt.c  windows_io.c
src/e2fsdroid/ext2fs/et/: Makefile  com_err.pc
src/erofs/: defs.h  erofs_fs.h
src/openssl/: openssl.7z
src/sparse/: CMakeLists.txt  Makefile  append2simg.cpp  img2simg.cpp  output_file.cpp  output_file.h  simg2img.cpp  simg2simg.cpp  sparse.cpp  sparse_defs.h  sparse_err.cpp  sparse_file.h  sparse_fuzzer.cpp  sparse_read.cpp
src/sparse/android-base/: macros.h  mapped_file.cpp  mapped_file.h  stringprintf.cpp  unique_fd.h
src/sparse/include/android-base/: expected.h  logging.h  result.h
src/sparse/src/: output_file.cpp
